feat: implemented accelerated D3D11 pipeline in C++ and JavaFX skeleton